--- a/index.html
+++ b/index.html
@@ -1,117 +1,91 @@
 <!DOCTYPE html>
 
-<html lang="en-us">
+<html class="no-js">
+
 
 <head>
+    <meta charset="utf-8">
 
-    <meta charset="UTF-8">
-    <title>Trian time</title>
+    <title>Train Schedule</title>
+    <meta name="description" content="">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-    <!-- Firebase Reference -->
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
-
-    <!-- Moment.js Reference -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-
-    <style>
-        #employee-table th,
-        td {
-            display: inline-block;
-            width: 20%;
-        }
-        
-        #emp {
-            left: 8%;
-            display: inline-block;
-        }
-    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+
+    <div class="container" id="head-container">
+        <div class="jumbotron" id="head">
+
+            <h3>Sacramento Train Schedule</h3>
+            <h3> Let's ride Train</h3>
+        </div>
+
+    </div>
+
+
     <div class="container">
 
+        <div class="panel panel-default">
+            <div class="panel-heading panel-custom">
+                Current Train Schedule
+            </div>
+            <table class="table table-hover">
+                <tr>
+                    <th scope="col">Train Name</th>
+                    <th scope="col">Destination</th>
+                    <th scope="col">Frequency (min)</th>
+                    <th scrope="col">Minutes Away</th>
+                    <th scope="col">Next Arrival</th>
+                </tr>
+                <tbody id="table-data"></tbody>
+            </table>
+            <hr />
 
-        <!-- Jumbotron -->
-        <div class="jumbotron" style="background-color:grey; color: white">
-            <h1 class="text-center">Anytime is train time</h1>
-            <h3 class="text-center">hoo.hoo hee.hee</h3>
         </div>
 
-        <div class="row">
 
-            <div class="col-md-12">
-
-                Current Employees
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h3 class="card-title">Current Employees</h3>
-                        <table class="table table-sm table-hover" id='employee-table'>
-                            <thead>
-                                <tr>
-                                    <th scope="col">Train name</th>
-                                    <th scope="col">Distination</th>
-                                    <th scope="col">Frequency(min)</th>
-                                    <th scope="col">Next arrival</th>
-                                    <th scope="col">Minutes Away</th>
-                                    <!-- <th scope="col">Total Billed ($)</th>-->
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+        <div class="panel panel-default">
+            <div class="panel-heading panel-custom">
+                Add Train
+            </div>
+            <div class="panel-body">
+                <form>
+                    <div class="form-group">
+                        <label for="trainName">Train Name:</label>
+                        <input type="text" class="form-control" id="train-name" required>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label for="destination">Destination:</label>
+                        <input type="text" class="form-control" id="train-destination" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="startYear">First Train Time: (military time) </label>
+                        <input type="text" class="form-control" placeholder="HH:MM" id="train-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="endYear">Frequency (minutes)</label>
+                        <input type="text" class="form-control" id="time-freq">
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" id="btn-add" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span> Submit</button>
+                    </div>
+                </form>
             </div>
+
         </div>
+
     </div>
 
-    <!-- Employee Tracker -->
-
-
-
-
-    <div class="row">
-        <div class="col-md-10" id="emp">
-            <!-- Add Employee  -->
-            <div class="card mb-4 p-4">
-                <div class="card-body">
-                    <h3 class="card-title">Add Employee</h3>
-                    <!-- Entry Form -->
-                    <form>
-                        <div class="form-group row">
-                            <label for="employee-name-input">Train Name</label>
-                            <input class="form-control" id="employee-name-input" placeholder="type train name" type="text">
-                        </div>
-                        <div class="form-group row">
-                            <label for="role-input">Distination</label>
-                            <input class="form-control" id="role-input" placeholder="distination" type="text">
-                        </div>
-                        <div class="form-group row">
-                            <label for="start-input">First TrainTime(HH:MM) military time</label>
-                            <input class="form-control" id="start-input" placeholder="hh:mm" type="text">
-                        </div>
-                        <div class="form-group row">
-                            <label for="rate-input">Frequency (min)</label>
-                            <input class="form-control" id="rate-input" placeholder="freq in min" type="text">
-                        </div>
-                        <button class="btn btn-primary float-right" id="add-employee-btn">Submit</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    <!-- JavaScript -->
     <script src="assets/javascript/train.js"></script>
-
 </body>
 
 </html>
